Simplify stream to list conversion